[gd_scene load_steps=10 format=2]

[ext_resource path="res://hud/dialogue/dialogue.gd" type="Script" id=1]
[ext_resource path="res://hud/dialogue/level1_start/level1_start.tscn" type="PackedScene" id=2]
[ext_resource path="res://hud/dialogue/level1_blood_area/blood_area.tscn" type="PackedScene" id=3]
[ext_resource path="res://hud/dialogue/ending_greg/ending_greg.tscn" type="PackedScene" id=4]
[ext_resource path="res://hud/dialogue/level1_lab_area/level1_lab_area.tscn" type="PackedScene" id=5]
[ext_resource path="res://hud/dialogue/level1_mr_wheat_area/level1_mr_wheat_area.tscn" type="PackedScene" id=6]
[ext_resource path="res://hud/dialogue/level1_elevator_switch_disabled_init/level1_elevator_switch_disabled_init.tscn" type="PackedScene" id=7]
[ext_resource path="res://hud/dialogue/level1_keypad_intro/level1_keypad_intro.tscn" type="PackedScene" id=8]
[ext_resource path="res://hud/dialogue/level1_players_office_intro/level1_players_office_intro.tscn" type="PackedScene" id=9]

[node name="Dialogue" type="Panel" groups=["dialogue_subscriber"]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Dialogues" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -80.0

[node name="Level1Start" parent="Dialogues" instance=ExtResource( 2 )]

[node name="Level1BloodArea" parent="Dialogues" instance=ExtResource( 3 )]

[node name="Level1LabArea" parent="Dialogues" instance=ExtResource( 5 )]

[node name="Level1MrWheatArea" parent="Dialogues" instance=ExtResource( 6 )]

[node name="Level1ElevatorSwitchDisabledInit" parent="Dialogues" instance=ExtResource( 7 )]

[node name="Level1KeypadIntro" parent="Dialogues" instance=ExtResource( 8 )]

[node name="Level1PlayersOfficeIntro" parent="Dialogues" instance=ExtResource( 9 )]

[node name="EndingGreg" parent="Dialogues" instance=ExtResource( 4 )]

[node name="NextOrClose" type="Button" parent="."]
pause_mode = 2
anchor_left = 0.51
anchor_top = 1.0
anchor_right = 0.51
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -60.0
margin_right = 100.0
margin_bottom = -20.0
text = "Next"

[connection signal="pressed" from="NextOrClose" to="." method="_on_next_or_close_pressed"]
